--- a/src/Tankerz.Domain.Shared/Localization/Tankerz/vi.json
+++ b/src/Tankerz.Domain.Shared/Localization/Tankerz/vi.json
@@ -2,7 +2,33 @@
   "culture": "vi",
   "texts": {
     "Menu:Home": "Trang chủ",
+    "Menu:Blog": "Trends",
+    "Menu:BlogCategory": "Danh mục tin tức",
+    "Menu:ProductCategory": "Danh mục sản phẩm",
+    "Menu:ProductGroup": "Nhóm sản phẩm",
+    "Menu:AdminManagement": "Quản lý Menu",
     "Welcome": "Chào mừng bạn",
-    "LongWelcomeMessage": "Chào mừng bạn đến ứng dụng. Đây là một dự án khởi nghiệp dựa trên khung ABP. Để biết thêm thông tin, hãy truy cập abp.io."
+    "LongWelcomeMessage": "Chào mừng bạn đến ứng dụng. Đây là một dự án khởi nghiệp dựa trên khung ABP. Để biết thêm thông tin, hãy truy cập abp.io.",
+    "AddNew": "Thêm mới",
+    "Actions": "Hành động",
+    "Edit": "Chỉnh sửa",
+    "Delete": "Xóa",
+    "DeletionConfirmationMessage": "Bạn chắc chắn muốn xóa item này?",
+    "SuccessfullyDeleted": "Đã xóa thành công!",
+    "SuccessfullyCreate": "Thêm mới thành công!",
+    "SuccessfullyEdit": "Chỉnh sửa thành công!",
+    "IsShowOnHomePage": "Hiển thị trên trang chủ",
+    "IsShowOnMenu": "Hiển thị trên Menu",
+    "IsPublish": "Xuất bản",
+    "Priority": "Thứ tự",
+    "Name": "Tên",
+    "Image": "Hình đại diện",
+    "CategoryName": "Tên danh mục",
+    "ProductGroupName": "Tên nhóm sản phẩm",
+    "BlogCategory": "Danh mục tin tức",
+    "Blog": "Trends",
+    "ProductCategory": "Danh mục sản phẩm",
+    "ProductGroup": "Nhóm sản phẩm",
+    "Product": "Sản phẩm"
   }
 }
